# fftw3

./: .gitignore  AUTHORS  CLASSIC-MODE  CMakeLists.txt  CONVENTIONS  COPYRIGHT  ChangeLog  FFTW3Config.cmake.in  FFTW3ConfigVersion.cmake.in  FindFFTW3.cmake.in  Makefile.am  Makefile.am.~0~  Makefile.am.~1~  Makefile.am.~2~  Makefile.am.~3~  Makefile.am.~4~  Makefile.am.~5~  NEWS  NEWS.~1~  README  README-meson.md  README.Cell  README.md  RESEARCH-MODE  SECURITY.md  TODO  acinclude.m4  acx_pthread.m4  bootstrap.sh  cmake.config.h.in  codemeta.json  commercialize.sh  conanfile.py  config.h.cmake  configure.ac  configure.ac.~0~  configure.ac.~1~  fftw.pc.in  meson.build  meson_options.txt  (+1 more)
api/: CMakeLists.txt  Makefile.am  api.h  apiplan.c  configure.c  dfthelp.c  execute-dft-c2r.c  execute-dft-r2c.c  execute-dft.c  execute-r2r.c  execute-split-dft-c2r.c  execute-split-dft-r2c.c  execute-split-dft.c  execute.c  export-wisdom-to-file.c  export-wisdom-to-string.c  export-wisdom.c  extract-reim.c  f03api.sh  f77api.c  f77funcs.c  f77funcs.h  fftw3.h  flops.c  forget-wisdom.c  genf03.pl  import-system-wisdom.c  import-wisdom-from-file.c  import-wisdom-from-string.c  import-wisdom.c  malloc.c  map-r2r-kind.c  mapflags.c  meson.build  mkprinter-file.c  mkprinter-str.c  mktensor-iodims.c  mktensor-iodims.h  mktensor-rowmajor-pad.c  mktensor-rowmajor.c  (+40 more)
cell/: Makefile.am  cell.c  conf.c  copy.c  dft-direct-cell.c  fftw-cell.h  plans-double.c  plans-single.c  spufftw-embed.S  transpose.c
dft/: CMakeLists.txt  Makefile.am  bluestein.c  buffered.c  codelet-dft.h  codelet-k7.h  codelet.h  conf.c  ct-dif-k7.c  ct-dif.c  ct-directw.c  ct-directwbuf.c  ct-dit-k7.c  ct-dit.c  ct-ditbuf-k7.c  ct-ditbuf.c  ct-ditf.c  ct-generic.c  ct.c  ct.h  ctsq.c  dft.h  dftw-dft.c  dftw-direct.c  dftw-directbuf.c  dftw-directsq.c  dftw-generic.c  dftw-genericbuf.c  direct-k7.c  direct.c  directw.c  directwbuf.c  directwsq.c  generic.c  indirect-transpose.c  indirect-transpose.c.~0~  indirect.c  kdft-dif-k7.c  kdft-dif.c  kdft-difsq.c  (+22 more)
doc/: Makefile.am  acknowledgements.texi  f77_wisdom.f  fftw3.texi  fftw3.texi.~0~  fortran.texi  install.texi  intro.texi  legacy-fortran.texi  license.texi  meson.build  mkversion.pl  modern-fortran.texi  mpi.texi  other.texi  reference.texi  rfftwnd.fig  threads.texi  tutorial.texi  upgrading.texi  version.texi
genfft/: .ocamlinit  CMakeLists.txt  Makefile.am  _tags  algsimp.ml  algsimp.mli  annotate.ml  annotate.mli  assoctable.ml  assoctable.mli  c.ml  c.mli  complex.ml  complex.mli  conv.ml  conv.mli  dag.ml  dag.mli  dune  dune-project  dune-workspace  expr.ml  expr.mli  fft.ml  fft.mli  gen_athnotw.ml  gen_athtw.ml  gen_conv.ml  gen_hc2c.ml  gen_hc2cdft.ml  gen_hc2cdft_c.ml  gen_hc2hc.ml  gen_hc2r.ml  gen_hc2r_noinline.ml  gen_mdct.ml  gen_notw.ml  gen_notw_c.ml  gen_notw_noinline.ml  gen_notw_noinline_c.ml  gen_r2cb.ml  (+37 more)
genfft-k7/: Makefile.am  algsimp.ml  algsimp.mli  assignmentsToVfpinstrs.ml  assignmentsToVfpinstrs.mli  assoctable.ml  assoctable.mli  balanceVfpinstrs.ml  balanceVfpinstrs.mli  codeletMisc.ml  codeletMisc.mli  complex.ml  complex.mli  expr.ml  expr.mli  exprdag.ml  exprdag.mli  fft.ml  fft.mli  genUtil.ml  genUtil.mli  gen_hc2hc.ml  gen_hc2hc.mli  gen_hc2real.ml  gen_hc2real.mli  gen_notw.ml  gen_notwiddle.ml  gen_notwiddle.mli  gen_notwiddle_fixedstride.ml  gen_real2hc.ml  gen_real2hc.mli  gen_realeven.ml  gen_realeven.mli  gen_realeven2.ml  gen_realeven2.mli  gen_realodd.ml  gen_realodd.mli  gen_realodd2.ml  gen_realodd2.mli  gen_twiddle.ml  (+74 more)
kernel/: CMakeLists.txt  Makefile.am  align.c  alloc.c  assert.c  awake.c  buffered.c  codelet.h  cpy1d.c  cpy2d-pair.c  cpy2d.c  ct.c  cycle.h  debug.c  dfftw3.h  dotens.c  dotens2.c  extract-reim.c  fftw.h  fftw3.h  flops.c  hash.c  iabs.c  ifftw.h  kalloc.c  lfftw3.h  md5-1.c  md5.c  meson.build  minmax.c  ops.c  pickdim.c  plan.c  planner-estimate.c  planner-naive.c  planner-score.c  planner.c  primes.c  print.c  printers.c  (+32 more)
libbench/: Makefile.am  accopy-from.c  accopy-to.c  acopy.c  allocate.c  ascale.c  aset.c  bench-main.c  bench-user.h  bench.h  caadd.c  cacopy.c  can-do.c  cascale.c  caset.c  casub.c  ccopy-from.c  ccopy-to.c  copy-c2c-from.c  copy-c2c-to.c  copy-c2h-1d-fftpack.c  copy-c2h-1d-halfcomplex.c  copy-c2h-1d-packed.c  copy-c2h-1d-unpacked-ri.c  copy-c2h-unpacked.c  copy-c2h.c  copy-c2r-packed.c  copy-c2r-unpacked.c  copy-c2r.c  copy-c2ri.c  copy-h2c-1d-fftpack.c  copy-h2c-1d-halfcomplex.c  copy-h2c-1d-packed.c  copy-h2c-1d-unpacked-ri.c  copy-h2c-unpacked.c  copy-h2c.c  copy-r2c-packed.c  copy-r2c-unpacked.c  copy-r2c.c  copy-ri2c.c  (+18 more)
libbench2/: CMakeLists.txt  Makefile.am  after-ccopy-from.c  after-ccopy-to.c  after-hccopy-from.c  after-hccopy-to.c  after-rcopy-from.c  after-rcopy-to.c  aligned-main.c  allocate.c  bench-cost-postprocess.c  bench-exit.c  bench-main.c  bench-user.h  bench.h  can-do.c  caset.c  dotens2.c  getopt-utils.c  getopt.c  getopt.h  info.c  main.c  meson.build  mflops.c  mp.c  my-getopt.c  my-getopt.h  ovtpvt.c  problem.c  report.c  speed.c  tensor.c  timer.c  timer2.c  useropt.c  util.c  verify-dft.c  verify-lib.c  verify-r2r.c  (+4 more)
mpi/: Makefile.am  README  any-true.c  api.c  block.c  choose-radix.c  conf.c  dft-problem.c  dft-rank-geq2-transposed.c  dft-rank-geq2.c  dft-rank1-bigvec.c  dft-rank1.c  dft-serial.c  dft-solve.c  dtensor.c  f03-wrap-meson.sh  f03-wrap.sh  f03api.sh  fftw3-mpi.h  fftw3_mpi.h  genf03-wrap.pl  ifftw-mpi.h  ifftw_mpi.h  meson.build  mpi-bench.c  mpi-dft-rank-geq2.c  mpi-dft-serial.c  mpi-dft.h  mpi-rdft.h  mpi-rdft2.h  mpi-transpose-alltoall.c  mpi-transpose-inplace.c  mpi-transpose.h  mpi_bench.c  mpi_dft.h  mpi_transpose.h  mpi_transpose_alltoall.c  mpi_transpose_inplace.c  problem.c  rdft-problem.c  (+23 more)
rdft/: CMakeLists.txt  Makefile.am  buffered.c  buffered2.c  codelet-rdft.h  codelet.h  conf.c  ct-hc2c-direct.c  ct-hc2c.c  ct-hc2c.h  ct.c  ct.h  dft-r2hc.c  dht-r2hc.c  dht-rader.c  direct-r2c.c  direct-r2hc.c  direct-r2r.c  direct.c  direct.c.~0~  direct2.c  generic.c  hc2hc-buf.c  hc2hc-common.c  hc2hc-dif.c  hc2hc-direct.c  hc2hc-dit.c  (+46 more)
(+517 files in other folders)
